feat: improve model and web management